crates/kith-core/tests/snapshots/walk_graph__ancestors_cousin_marriage_g3.snap
---
source: crates/kith-core/tests/walk_graph.rs
expression: "&graph"
---
RelativeGraph(
  focus: 9,
  mode: Ancestors,
  persons: [
    PersonNode(
      node: 0,
      person: 9,
      generation: 0,
      display_name: "Gustav Vest",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: true,
    ),
    PersonNode(
      node: 2,
      person: 7,
      generation: -1,
      display_name: "Erik Vest",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 3,
      person: 8,
      generation: -1,
      display_name: "Frida Ost",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 5,
      person: 3,
      generation: -2,
      display_name: "Carl Stamfar",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 6,
      person: 5,
      generation: -2,
      display_name: "Wilma Vest",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 8,
      person: 4,
      generation: -2,
      display_name: "Dora Stamfar",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 9,
      person: 6,
      generation: -2,
      display_name: "Viktor Ost",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 11,
      person: 1,
      generation: -3,
      display_name: "Anders Stamfar",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 12,
      person: 2,
      generation: -3,
      display_name: "Berta Stamfar",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 14,
      person: 1,
      generation: -3,
      display_name: "Anders Stamfar",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 15,
      person: 2,
      generation: -3,
      display_name: "Berta Stamfar",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
  ],
  unions: [
    UnionNode(
      node: 1,
      family: 4,
      generation: -1,
      partners: [
        2,
        3,
      ],
    ),
    UnionNode(
      node: 4,
      family: 2,
      generation: -2,
      partners: [
        5,
        6,
      ],
    ),
    UnionNode(
      node: 7,
      family: 3,
      generation: -2,
      partners: [
        8,
        9,
      ],
    ),
    UnionNode(
      node: 10,
      family: 1,
      generation: -3,
      partners: [
        11,
        12,
      ],
    ),
    UnionNode(
      node: 13,
      family: 1,
      generation: -3,
      partners: [
        14,
        15,
      ],
    ),
  ],
  edges: [
    Partner(
      person: 2,
      union: 1,
    ),
    Partner(
      person: 3,
      union: 1,
    ),
    Descent(
      union: 1,
      child: 0,
    ),
    Partner(
      person: 5,
      union: 4,
    ),
    Partner(
      person: 6,
      union: 4,
    ),
    Descent(
      union: 4,
      child: 2,
    ),
    Partner(
      person: 8,
      union: 7,
    ),
    Partner(
      person: 9,
      union: 7,
    ),
    Descent(
      union: 7,
      child: 3,
    ),
    Partner(
      person: 11,
      union: 10,
    ),
    Partner(
      person: 12,
      union: 10,
    ),
    Descent(
      union: 10,
      child: 5,
    ),
    Partner(
      person: 14,
      union: 13,
    ),
    Partner(
      person: 15,
      union: 13,
    ),
    Descent(
      union: 13,
      child: 8,
    ),
  ],
)
