crates/kith-core/tests/snapshots/walk_graph__ancestors_small_balanced_g2.snap
---
source: crates/kith-core/tests/walk_graph.rs
expression: "&graph"
---
RelativeGraph(
  focus: 7,
  mode: Ancestors,
  persons: [
    PersonNode(
      node: 0,
      person: 7,
      generation: 0,
      display_name: "Olav Lund",
      birth_year: Some(1850),
      death_year: Some(1915),
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: true,
    ),
    PersonNode(
      node: 2,
      person: 5,
      generation: -1,
      display_name: "Anders Lund",
      birth_year: Some(1825),
      death_year: Some(1890),
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 3,
      person: 6,
      generation: -1,
      display_name: "Anna Lie",
      birth_year: Some(1828),
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 5,
      person: 1,
      generation: -2,
      display_name: "Per Lund",
      birth_year: Some(1800),
      death_year: Some(1865),
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 6,
      person: 2,
      generation: -2,
      display_name: "Petra Lund",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 8,
      person: 3,
      generation: -2,
      display_name: "Mads Lie",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 9,
      person: 4,
      generation: -2,
      display_name: "Mona Lie",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
  ],
  unions: [
    UnionNode(
      node: 1,
      family: 3,
      generation: -1,
      partners: [
        2,
        3,
      ],
    ),
    UnionNode(
      node: 4,
      family: 1,
      generation: -2,
      partners: [
        5,
        6,
      ],
    ),
    UnionNode(
      node: 7,
      family: 2,
      generation: -2,
      partners: [
        8,
        9,
      ],
    ),
  ],
  edges: [
    Partner(
      person: 2,
      union: 1,
    ),
    Partner(
      person: 3,
      union: 1,
    ),
    Descent(
      union: 1,
      child: 0,
    ),
    Partner(
      person: 5,
      union: 4,
    ),
    Partner(
      person: 6,
      union: 4,
    ),
    Descent(
      union: 4,
      child: 2,
    ),
    Partner(
      person: 8,
      union: 7,
    ),
    Partner(
      person: 9,
      union: 7,
    ),
    Descent(
      union: 7,
      child: 3,
    ),
  ],
)
