crates/kith-core/tests/snapshots/walk_graph__descendants_multiple_marriage_g1.snap
---
source: crates/kith-core/tests/walk_graph.rs
expression: "&graph"
---
RelativeGraph(
  focus: 1,
  mode: Descendants,
  persons: [
    PersonNode(
      node: 0,
      person: 1,
      generation: 0,
      display_name: "Henrik Sand",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: true,
    ),
    PersonNode(
      node: 2,
      person: 2,
      generation: 0,
      display_name: "Ingrid Sand",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 3,
      person: 4,
      generation: 1,
      display_name: "Arne Sand",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 4,
      person: 5,
      generation: 1,
      display_name: "Bente Sand",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 6,
      person: 3,
      generation: 0,
      display_name: "Johanna Sand",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 7,
      person: 6,
      generation: 1,
      display_name: "Carl Sand",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
  ],
  unions: [
    UnionNode(
      node: 1,
      family: 1,
      generation: 0,
      partners: [
        0,
        2,
      ],
    ),
    UnionNode(
      node: 5,
      family: 2,
      generation: 0,
      partners: [
        0,
        6,
      ],
    ),
  ],
  edges: [
    Partner(
      person: 0,
      union: 1,
    ),
    Partner(
      person: 2,
      union: 1,
    ),
    Descent(
      union: 1,
      child: 3,
    ),
    Descent(
      union: 1,
      child: 4,
    ),
    Partner(
      person: 0,
      union: 5,
    ),
    Partner(
      person: 6,
      union: 5,
    ),
    Descent(
      union: 5,
      child: 7,
    ),
  ],
)
