crates/kith-core/tests/snapshots/walk_graph__descendants_small_balanced_g2.snap
---
source: crates/kith-core/tests/walk_graph.rs
expression: "&graph"
---
RelativeGraph(
  focus: 7,
  mode: Descendants,
  persons: [
    PersonNode(
      node: 0,
      person: 7,
      generation: 0,
      display_name: "Olav Lund",
      birth_year: Some(1850),
      death_year: Some(1915),
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: true,
    ),
    PersonNode(
      node: 2,
      person: 8,
      generation: 0,
      display_name: "Kari Lund",
      birth_year: None,
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 3,
      person: 9,
      generation: 1,
      display_name: "Liv Lund",
      birth_year: Some(1875),
      death_year: None,
      sex: Female,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
    PersonNode(
      node: 4,
      person: 10,
      generation: 1,
      display_name: "Nils Lund",
      birth_year: None,
      death_year: None,
      sex: Male,
      living: true,
      primary_portrait: None,
      focal: false,
    ),
  ],
  unions: [
    UnionNode(
      node: 1,
      family: 4,
      generation: 0,
      partners: [
        0,
        2,
      ],
    ),
  ],
  edges: [
    Partner(
      person: 0,
      union: 1,
    ),
    Partner(
      person: 2,
      union: 1,
    ),
    Descent(
      union: 1,
      child: 3,
    ),
    Descent(
      union: 1,
      child: 4,
    ),
  ],
)
